--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
